# shitstrap

./: .gitignore  Cargo.toml  NOTICE  README.md  justfile
contracts/cw-shitstrap/: Cargo.toml
contracts/cw-shitstrap-factory/: Cargo.toml
contracts/cw-shitstrap-factory/examples/: schema.rs
contracts/cw-shitstrap-factory/src/: contract.rs  lib.rs  msg.rs  state.rs  tests.rs
contracts/cw-shitstrap/src/: README.md  contract.rs  error.rs  lib.rs  msg.rs  state.rs  test.rs
external-protos/cw20/: cw20-base.json
external-protos/shitstrap-factory/: cw-shitstrap-factory.json
src/: contract.rs  error.rs  msg.rs  state.rs  test.rs
ts/: codegen.ts  package.json
ts/src/: Cw20Base.client.ts  Cw20Base.message-composer.ts  Cw20Base.react-query.ts  ShitStrap.client.ts  ShitStrap.message-composer.ts  ShitStrap.react-query.ts  ShitStrap.types.ts  ShitStrapFactory.client.ts  ShitStrapFactory.message-composer.ts  ShitStrapFactory.react-query.ts  ShitStrapFactory.types.ts  index.ts
