[workspace]
name = "cw-shitstrap"
exclude = [ ]
members =  [
  "contracts/cw-shitstrap",
  "contracts/cw-shitstrap-factory",
]

[workspace.package]
license = "BSD-3-Clause"
repository = "https://github.com/shitmos/shitstrap"
edition = "2021"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
panic = 'abort'
rpath = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true




[workspace.dependencies]
cosmwasm-schema = "1.5.2"
cosmwasm-std = { version = "1.5.2" }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-orch = "0.22.2"
cw-denom = "2.4.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-multi-test = "1.2.0"
cw-utils = "1.0"
cw-ownable = "0.5"
