[package]
name ="cw-shitstrap-factory"
version = "0.1.0"
authors = ["Jake Hartnell"]
description = "A CosmWasm factory contract for instantiating a payroll contract."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-shitstrap = { path = "../cw-shitstrap", features = ["library"] }
cw-denom = { workspace = true }
cw-ownable = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

[dev-dependencies]
cw-multi-test = { workspace = true }
cw20-base = { workspace = true, features = ["library"] }